--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -41,8 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accion.cs" />
+    <Compile Include="Asiento.cs" />
+    <Compile Include="Clasificacion.cs" />
+    <Compile Include="LogTran.cs" />
+    <Compile Include="Pelicula.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rol.cs" />
+    <Compile Include="Sala.cs" />
+    <Compile Include="Sesion.cs" />
+    <Compile Include="Transaccion.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="Venta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
