--- a/Usuarios/App.config
+++ b/Usuarios/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<connectionStrings>
-		<add name="cadena_conexion" connectionString="Data Source=26.21.190.108;Initial Catalog=CINES;Persist Security Info=True;User ID=Admin;Password=5260;Encrypt=False;TrustServerCertificate=True;
+		<add name="cadena_conexion" connectionString="Data Source=26.21.190.108;Initial Catalog=CINES;Persist Security Info=True;User ID=Pablo;Password=48038429;Encrypt=False;TrustServerCertificate=True;
 " providerName="System.data.sqlClient"
 			 
 			 />
