Modificacion del servidor de SignalR y agregacion del campo ingreso de peliculas

--- a/SignalR/SignalR.csproj
+++ b/SignalR/SignalR.csproj
@@ -103,7 +103,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="UsuarioHub.cs" />
+    <Compile Include="ConeccionHub.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
