Creacion del front para creacion de sesiones

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -87,6 +87,8 @@
     <Compile Include="CD_Clasificacion.cs" />
     <Compile Include="CD_Pelicula.cs" />
     <Compile Include="CD_Rol.cs" />
+    <Compile Include="CD_Sala.cs" />
+    <Compile Include="CD_Sesion.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CD_Usuario.cs" />
