--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -86,6 +86,8 @@
     <Compile Include="CN_Clasificacion.cs" />
     <Compile Include="CN_Pelicula.cs" />
     <Compile Include="CN_Rol.cs" />
+    <Compile Include="CN_Sala.cs" />
+    <Compile Include="CN_Sesion.cs" />
     <Compile Include="CN_Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
