--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -89,6 +89,7 @@
     <Compile Include="CD_Rol.cs" />
     <Compile Include="CD_Sala.cs" />
     <Compile Include="CD_Sesion.cs" />
+    <Compile Include="CD_Transaccion.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CD_Usuario.cs" />
