--- a/Usuarios/CapaPresentacion.csproj
+++ b/Usuarios/CapaPresentacion.csproj
@@ -119,6 +119,12 @@
     <Compile Include="FRMusuarios.Designer.cs">
       <DependentUpon>FRMusuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="FRMventas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FRMventas.Designer.cs">
+      <DependentUpon>FRMventas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
