Creacion de formularios para la pestaña ventas

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CD_Asiento.cs" />
     <Compile Include="CD_Clasificacion.cs" />
     <Compile Include="CD_Pelicula.cs" />
     <Compile Include="CD_Rol.cs" />
