--- a/Usuarios/CapaPresentacion.csproj
+++ b/Usuarios/CapaPresentacion.csproj
@@ -137,6 +137,18 @@
     <Compile Include="Menu.Designer.cs">
       <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modales\mdAsiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modales\mdAsiento.Designer.cs">
+      <DependentUpon>mdAsiento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modales\mdSesion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modales\mdSesion.Designer.cs">
+      <DependentUpon>mdSesion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilidades\Encriptar.cs" />
@@ -153,11 +165,20 @@
     <EmbeddedResource Include="FRMusuarios.resx">
       <DependentUpon>FRMusuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FRMventas.resx">
+      <DependentUpon>FRMventas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modales\mdAsiento.resx">
+      <DependentUpon>mdAsiento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modales\mdSesion.resx">
+      <DependentUpon>mdSesion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -196,5 +217,6 @@
   <ItemGroup>
     <None Include="Resources\Check.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
